pod1.yml
apiVersion: v1
kind: Pod
metadata: 
 name: "mydb"
 labels:
   app: mydb

spec: 
 containers:  
 - name: "mydb"
   image: "mysql:5.7"
