svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mylb1
spec:
  selector:
   app: web
  ports: 
    - targetPort: 80
      port: 8080
